# Ozero

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PLAN.md  README.en.md  README.es.md  README.md  README.pt.md  SECURITY.md  build.gradle.kts  detekt.yml  gradle.properties  gradlew  settings.gradle.kts
.claude/: settings.json
.codex/: hooks.json
.githooks/: README.md  install.sh  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.memory/: .gitignore  AGENTS.md  COMMIT_MSG.txt  README.md
app/: build.gradle.kts  obfuscation-dict.txt  proguard-rules.pro
app-desktop/: build.gradle.kts
build-tools/: Dockerfile  Dockerfile.byedpi  Dockerfile.fptn  Dockerfile.mtg  README.md  binaries.lock.yaml  build_amneziawg.sh  build_byedpi.sh  build_fptn.sh  build_hysteria2.sh  build_mtg.sh  build_naive.sh  build_tor.sh  build_xray.sh  check_upstream.py  regen_lock.py
buildSrc/: build.gradle.kts  settings.gradle.kts
common-crypto/: build.gradle.kts
common-dns/: build.gradle.kts
common-json/: build.gradle.kts
common-net/: build.gradle.kts
common-vpn/: build.gradle.kts  consumer-rules.pro
core-api/: build.gradle.kts
core-backup/: build.gradle.kts
engine-fptn/src/main/cpp/: CMakeLists.txt  conanfile.py
engine-fptn/src/main/cpp/src/: https_client.cpp  sni_checker.cpp  websocket_client.cpp
engine-fptn/src/main/cpp/src/jnienv/: jnienv.cpp  jnienv.h
engine-fptn/src/main/cpp/src/wrappers/utils/: utils.cpp  utils.h
engine-fptn/src/main/cpp/src/wrappers/wrapper_https_client/: wrapper_https_client.cpp  wrapper_https_client.h
engine-fptn/src/main/cpp/src/wrappers/wrapper_websocket_client/: wrapper_websocket_client.cpp  wrapper_websocket_client.h
(+1989 files in other folders)
